---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025-03-28
  Features:
    - New biological / agricultural tech tree
  Changes:
    - Greenhouse renamed to woodfarm - WARNING: All instances of greenhouses on your map are gone now!
    - Woodfarm building has the same recipe as greenhouse, so if you had greenhouses automated you will have to select now woodfarm.
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2025-03-21
  Features:
    - Added more items
  Changes:
    - Updated recipe chain for recycler
    - Updated recipe chain for nuclear reactor
    - Updated locale
    - Updated graphics of buildings
    - Changed tier 1 military items recipes
    - Updated tier 2 military tech tree
  Bugfixes:
    - Fixed cyclic dependancy in tech tree for craftgin diamond saw
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2025-03-14
  Features:
    - Added more items like mosfet, VRM, and doped silicon
  Changes:
    - Updated names for some alloys
    - Updated icons for enriching ores
    - Updated tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2025-03-09
  Features:
    - Added crystallizer
  Changes:
    - Updated tech tree
    - Ferrite among other metals unlocked in mid to late game can now not be smelted in stone or steel furnace
  Bugfixes:
    - electric furnace does not require electro magnets
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2025-03-08
  Features:
    - Added germanium recipe chain
    - Updated recipe chains for sensors
  Bugfixes:
    - Potassium hydroxide solution does not require advanced chemical plant to be made.