@@ -72,7 +72,23 @@ data.raw.technology["tungsten-carbide"].unit = {
   time = 30
 }
 
-table.insert(data.raw.technology["agriculture"].prerequisites, "sp-automation-science-pack-2")
+table.insert(data.raw.technology["agriculture"].prerequisites, "sp-greenhouse")
+data.raw.technology["agriculture"].research_trigger = nil
+data.raw.technology["agriculture"].unit = {
+  count = 200,
+  ingredients = {
+    {"sp-automation-science-pack-2", 1},
+    {"logistic-science-pack", 1},
+    {"chemical-science-pack", 1},
+    {"sp-material-science-pack-1", 1},
+    {"sp-geological-science-pack-1", 1},
+    {"sp-electronic-science-pack-1", 1},
+    {"metallurgic-science-pack", 1},
+    {"electromagnetic-science-pack", 1}
+  },
+  time = 30
+}
+
 
 data.raw.technology["heating-tower"].effects =
 {
