@@ -17,7 +17,7 @@ require("prototypes.buildings.energy-storage")
 require("prototypes.buildings.filtration-plant")
 require("prototypes.buildings.fluid-burner")
 require("prototypes.buildings.fuel-refinery")
-require("prototypes.buildings.woodfarm")
+require("prototypes.buildings.greenhouse")
 require("prototypes.buildings.incinerator")
 require("prototypes.buildings.large-roboport")
 require("prototypes.buildings.large-storage-tank")
@@ -39,6 +39,7 @@ require("prototypes.buildings.stabilizer-charging-station")
 require("prototypes.buildings.stellar-sinkhole-forge")
 require("prototypes.buildings.superior-inserters")
 require("prototypes.buildings.wind-turbine")
+require("prototypes.buildings.woodfarm")
 
 -- Hurricane046 Buildings
 require("prototypes.buildings.alloy-forge")
