@@ -4622,22 +4622,22 @@ data:extend({
   ------------------------------------------------------------------------------
   -- MARK: agriculture-processes
   ------------------------------------------------------------------------------
-  -- {
-  --   type = "item",
-  --   name = "sp-potato",  -- #ForRegEx# - item
-  --   icon = "__Spaghetorio__/graphics/icons/potato-1.png",
-  --   icon_size = 64,
-  --   icon_mipmaps = 4,
-  --   pictures = {
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-1.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-2.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-3.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-4.png", scale = 0.5, mipmap_count = 4}
-  --   },
-  --   subgroup = "agriculture-processes",
-  --   order = "[potato]",
-  --   stack_size = 100
-  -- },
+  {
+    type = "item",
+    name = "sp-potato",  -- #ForRegEx# - item
+    icon = "__Spaghetorio__/graphics/icons/potato-1.png",
+    icon_size = 64,
+    icon_mipmaps = 4,
+    pictures = {
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-1.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-2.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-3.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/potato-4.png", scale = 0.5, mipmap_count = 4}
+    },
+    subgroup = "agriculture-processes",
+    order = "[potato]",
+    stack_size = 100
+  },
   {
     type = "item",
     name = "sp-fungi",  -- #ForRegEx# - item
@@ -4670,22 +4670,22 @@ data:extend({
     order = "[leaf]",
     stack_size = 50
   },
-  -- {
-  --   type = "item",
-  --   name = "sp-wheat",  -- #ForRegEx# - item
-  --   icon = "__Spaghetorio__/graphics/icons/wheat-1.png",
-  --   icon_size = 64,
-  --   icon_mipmaps = 4,
-  --   pictures = {
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-1.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-2.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-3.png", scale = 0.5, mipmap_count = 4},
-  --     {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-4.png", scale = 0.5, mipmap_count = 4}
-  --   },
-  --   subgroup = "agriculture-processes",
-  --   order = "[wheat]",
-  --   stack_size = 100
-  -- },
+  {
+    type = "item",
+    name = "sp-wheat",  -- #ForRegEx# - item
+    icon = "__Spaghetorio__/graphics/icons/wheat-1.png",
+    icon_size = 64,
+    icon_mipmaps = 4,
+    pictures = {
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-1.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-2.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-3.png", scale = 0.5, mipmap_count = 4},
+      {size = 64, filename = "__Spaghetorio__/graphics/icons/wheat-4.png", scale = 0.5, mipmap_count = 4}
+    },
+    subgroup = "agriculture-processes",
+    order = "[wheat]",
+    stack_size = 100
+  },
   {
     type = "item",
     name = "sp-animal-fat",  -- #ForRegEx# - item
@@ -7065,8 +7065,19 @@ data:extend({
     icon_size = 64,
     icon_mipmaps = 4,
     subgroup = "production-machine",
-    order = "d-g1[greenhouse]",
+    order = "d-g1[woodfarm]",
     place_result = "sp-kr-woodfarm",
+    stack_size = 50,
+  },
+  {
+    type = "item",
+    name = "sp-greenhouse",  -- #ForRegEx# - building
+    icon = "__Spaghetorio__/graphics/icons/greenhouse.png",
+    icon_size = 64,
+    icon_mipmaps = 4,
+    subgroup = "production-machine",
+    order = "d-g1[greenhouse]",
+    place_result = "sp-kr-greenhouse",
     stack_size = 50,
   },
   {
